--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "firebase": "^10.7.0",
